--- a/necro.css
+++ b/necro.css
@@ -1,4 +1,5 @@
 
+
 body{
   background-color: black;
 }
@@ -54,19 +55,19 @@ margin-top: 0px;
 }
 .h1{
 position: fixed;
-text-size-adjust: 30px;
+
 }
 .menu-bg {
 background-color: hsl(118, 96%, 49%);
 height: 100vh;
-width: 300px;
+width: 500px;
 
 display: none;
 position: fixed;
 top: 0;
-left: 1250px;
+right: 0px;
 z-index: 1;
-transform: translateX;
+
 }
 .change-bg{
 display: block;
@@ -89,6 +90,7 @@ text-decoration: none;
 text-align: center;
 height: 100vh;
 position: fixed;
+font-size: 50px;
 }
 #pi{
 animation: mymove 5s infinite;
@@ -170,7 +172,7 @@ padding: 0 20px;
 
 
 
- @media  (max-width:500px){
+ @media (min-width:360px ) and  (max-width:500px){
   h1{
     font-size: 15vw !important;
   }
@@ -195,15 +197,24 @@ padding: 0 20px;
     top: 46% !important;
     left: 60% !important;
   }
-  
-    .na li a {
+  .na li a{
     margin-left: 40px !important;
     font-size: 30px !important;
-    margin-top: -30px !important;
-}
+    margin-top: -120px;
+  }
+
 #chat-bot-launcher-container.chat-bot-avatar-launcher, #chat-bot-launcher-container.chat-bot-launcher-notext {
   bottom: 15px;
   left: 40px;
   position: absolute;
 }
+
+}
+@media (min-width:400px) and (max-width:600px){
+  .bar{
+    right: 10% !important;
+  }
+  .na li a {
+    margin-top: -50px !important;
+  }
 }
