--- a/education.css
+++ b/education.css
@@ -21,20 +21,29 @@ body{
     background-color: gray;
     text-align: center;
 }
-@media (max-width:500px){
+@media (min-width:300px) and (max-width:500px){
     #two {
         position: absolute !important;
-        top: 65% !important;
+        top: 70% ;
         left: 5% !important;
         right: 5% !important;
     }
     img{
-        height: 226px !important;
-        width: 100% !important;
+        height: 176px ;
+        width: 100% ;
     }
     #one{
         top: 15% !important;
         left: 5% !important;
         right: 5% !important;
+    }
+}
+@media (min-width:400px) and (max-width:500px){
+    img{
+        height: 226px ;
+        width: 100%;
+    }
+    #two{
+        top: 65%;
     }
 }
