--- a/contacts.css
+++ b/contacts.css
@@ -60,47 +60,27 @@ ul li a
     display: inline;
     padding: 30px;
 }
+
 @media (max-width:500px){
     #two li {
         display: block;
-        padding: 30px !important;
+        padding: 30px ;
            
-        padding-right: 200px !important;
-        padding-bottom: 40px !important;
+        padding-right: 200px ;
+        padding-bottom: 40px;
     }
     ul li{
-        border-radius: 0px !important;
-        font-size: 30px !important;
-        line-height: 40px !important;
+        border-radius: 0px;
+        font-size: 30px;
+        line-height: 40px;
     }
-    #three h3{
-        position: fixed !important;
-        right: 80px !important;
-        top: 126px ;
-        display: block;
-    }
-    #four h3{
-        position: fixed !important;
-        right: 70px !important;
-        top: 282px !important;
-        display: block;
-    }
-    #five h3{
-        position: fixed !important;
-        right: 90px !important;
-        top: 445px !important;
-        display: block;
-    }
+   
 }
 @media (min-width:400px) and (max-width:500px)
 {
-    #four h3{
-        top:410px !important
-    }
-    #five h3{
-        top: 572px !important;
-    }
-    #three h3{
-        top: 252px;
+   
+    .one{
+        position: relative !important;
+        float: right !important;
     }
 }
