--- a/contacts.css
+++ b/contacts.css
@@ -97,3 +97,8 @@ ul li a
         display: inline !important;
     }
 }
+@media (min-width:740px) and (max-width:1200px){
+    ul li {
+        font-size: 140px;
+    }
+}
