--- a/signup2.css
+++ b/signup2.css
@@ -97,5 +97,30 @@ body{
     .container{
         width: 300px;
     }
-}}
+}
+
+@media (min-width:750px) and (max-width:1200px){
+    .form .inputBox{
+        margin-top: 60px;
+    }
+    .container{
+        width: 650px;
+        min-height: 500px;
+    }
+    .form .inputBox input{
+        font-size: 32px;
+    }
+    .form h2{
+        font-size: 42px;
+    }
+    .form p{
+        font-size: 30px;
+    }
+    
+}
+@media (min-width:1000px) and (max-width:1200px){
+    .container{
+        width: 750px;
+        min-height: 550px;
+    }
 }
