--- a/about.css
+++ b/about.css
@@ -43,7 +43,7 @@ body{
 @media (min-width:700px) and (max-width:900px)
 {
   .img-circle {
-    margin-left: 28% !important;
+    margin-left: 20% !important;
     height: 400px;
     width: 400px;
     margin-top: 10%;
@@ -69,7 +69,7 @@ body{
     font-size: xx-large;
     left: 10%;
     right: 10%;
-    top: 45%;
+    top: 48%;
   }
   p{
     font-size: xxx-large;
@@ -99,4 +99,19 @@ body{
   }
  
 
+}
+@media (min-width:590px) and (max-width:620px){
+  .img-circle {
+    margin-left: 20% !important;
+    margin-top: 20% !important;
+    height: 400px !important;
+    width: 380px !important;
+    
+}
+#three{
+  font-size: xx-large;
+  left: 0%;
+  right: 0%;
+  top: 58%;
+}
 }
