--- a/necro.css
+++ b/necro.css
@@ -187,7 +187,7 @@ padding: 0 20px;
 /*     left: 190px !important; */
     right: 12% !important;
   margin-top: 50px !important;
-   width: 70px !important;
+   width: 60px !important;
   }
   #menu-bg{
     left: 0px !important;
@@ -252,6 +252,7 @@ padding: 0 20px;
   .na li a{
     right: 50% !important;
     margin-top: 30% !important;
+    font-size: 60px;
   }
 }
 @media (min-width:1200px){
@@ -349,5 +350,22 @@ padding: 0 20px;
     margin-top:24% !important;
     font-size: 50px !important;
     right: 58% !important;
+  }
+}
+@media (max-width:322px){
+  .na li a {
+    margin-top: -47px !important;
+    
+  }
+  .na li{
+    padding: 35px !important;
+  }
+}
+@media (min-width:899px) and (max-width:1100px){
+  .na li a {
+    margin-top: 80px !important;
+  }
+  .bar{
+    width: 80px;
   }
 }
