--- a/about.css
+++ b/about.css
@@ -6,8 +6,9 @@
   background-color: #000000;
   position: absolute;
   
-  left: 20%;
-  right: 20%;
+  left: 10%;
+  right: 10%;
+  top: 85%;
   
 }
 
@@ -65,9 +66,9 @@ p{
   }
  
 }
-@media (min-width:800px) and (max-width:1200px){
+@media (min-width:800px) and (max-width:1100px){
   .img-circle{
-    margin-left: 31%;
+    margin-left: 28%;
     height: 500px;
     width: 500px;
     margin-top: 10%;
@@ -84,13 +85,17 @@ p{
 }
 @media(min-width:1200px){
  .img-circle{
-   margin-left:600px;
+   margin-left:34%;
   margin-top: 10%;
-  height: 300px;
-  width: 280px;
+  height: 370px;
+  width: 370px;
+ }
+ p{
+   font-size: xx-large;
  }
 
-}
+
+} 
 @media (min-width:250px) and (max-width:300px){
   #three{
     left: 0px;
