--- a/necro.css
+++ b/necro.css
@@ -89,8 +89,7 @@ height: 100vh;
 position: fixed;
 font-size: 50px;
 right: 260px !important;
-margin-top: 0px !important;
-transform: translateY(-30%);
+
 }
 #pi{
 animation: mymove 5s infinite;
@@ -265,6 +264,11 @@ padding: 0 20px;
   #two{
     font-size: 5vw;
   }
+  .na li a
+  {
+  margin-top: 0px !important;
+transform: translateY(-28%);
+  }
 }
 @media (min-width:800px) and (max-width:1200px){
   .neon{
@@ -363,7 +367,8 @@ padding: 0 20px;
 }
 @media (min-width:899px) and (max-width:1100px){
   .na li a {
-    margin-top: 80px !important;
+    margin-top: 100px !important;
+    font-size: 60px;
   }
   .bar{
     width: 80px;
