--- a/necro.css
+++ b/necro.css
@@ -112,7 +112,7 @@ position:absolute;
 
 
 .neon{
-  top: 50%;
+  top: 40%;
   left: 50%;
   position: absolute;
   transform: translate(-50%,-50%);
@@ -148,7 +148,7 @@ filter: blur(40px);
 padding: 0 20px;
 }
 #one{
-  top: 60%;
+  top: 50%;
   left: 50%;
   position: absolute;
   transform: translate(-50%,-50%);
@@ -158,7 +158,7 @@ padding: 0 20px;
   text-shadow:0 0 20px #0df505;
 }
 #two{
-  top: 70%;
+  top: 60%;
   left: 50%;
   position: absolute;
   transform: translate(-50%,-50%);
@@ -197,17 +197,17 @@ padding: 0 20px;
     top: 35% !important;
   }
   #two{
-    top: 56% !important;
+    top: 51% !important;
     left: 55% !important;
   }
   #one{
-    top: 46% !important;
+    top: 43% !important;
     left: 60% !important;
   }
   .na li a{
     margin-left: 40px !important;
     font-size: 35px !important;
-    margin-top: -120px;
+    margin-top: -170px;
   }
 
   #chat-bot-launcher-container.chat-bot-avatar-launcher, #chat-bot-launcher-container.chat-bot-launcher-notext {
@@ -226,7 +226,7 @@ padding: 0 20px;
 @media (min-width:370px) and (max-width:400px)
 {
 .na li a{
-  transform: translateY(-18%);
+  transform: translateY(-6%);
     right: 238px !important;
     font-size: 50px !important;
 }
@@ -249,8 +249,8 @@ padding: 0 20px;
     width: 100vw;
   }
   .na li a{
-    right: 50% !important;
-    margin-top: 30% !important;
+    right: 54% !important;
+   transform: translateY(-70px);
     font-size: 60px;
   }
 }
@@ -273,15 +273,15 @@ transform: translateY(-28%);
 @media (min-width:800px) and (max-width:1200px){
   .neon{
     font-size: 15vw;
-    top: 45%;
+    
   }
   #one{
     font-size: 15vw;
-    top: 55%;
+    
   }
   #two{
     font-size: 15vw;
-    top: 65%;
+    
   }
   .bar{
     top: 5%;
@@ -294,9 +294,10 @@ transform: translateY(-28%);
     padding: 110px;
   }
   .na li a {
-    margin-top: 200px !important;
-    font-size: 80px;
+    margin-top: 0px !important;
+    font-size: 70px;
     right: 60% !important;
+    transform: translateY(-200px);
   }
  
 }
@@ -340,9 +341,10 @@ transform: translateY(-28%);
     font-size: 15vw;
   }
   .na li a {
-    margin-top: 35% !important;
-    right: 54% !important;
+    margin-top: 0 !important;
+    right: 56% !important;
     font-size: 60px;
+    transform: translateY(-90px);
   }
   .bar{
     width: 80px;
@@ -351,26 +353,36 @@ transform: translateY(-28%);
 }
 @media (min-width:400px) and (max-width:590px){
   .na li a{
-    margin-top:24% !important;
+  
     font-size: 50px !important;
     right: 58% !important;
+    margin-top: -160px;
   }
 }
 @media (max-width:322px){
-  .na li a {
-    margin-top: -47px !important;
-    
-  }
+ 
   .na li{
     padding: 35px !important;
+  }
+  .na li a{
+     margin-top: -196px;
+  }
+  .bar{
+    width: 55px !important;
+    right: 6% !important;
   }
 }
 @media (min-width:899px) and (max-width:1100px){
   .na li a {
     margin-top: 100px !important;
-    font-size: 60px;
+    font-size: 70px;
   }
   .bar{
     width: 80px;
   }
+}
+@media (max-width:660px) and (min-width:610px){
+ .neon{
+   font-size: 9vw;
+ }
 }
