--- a/necro.css
+++ b/necro.css
@@ -269,6 +269,9 @@ padding: 0 20px;
   margin-top: 0px !important;
 transform: translateY(-28%);
   }
+  .na li{
+   padding: 70px;
+  }
 }
 @media (min-width:800px) and (max-width:1200px){
   .neon{
