--- a/about.css
+++ b/about.css
@@ -32,16 +32,19 @@ body{
     width: 280px !important;
     margin-right: 3% !important;
 }
+p{
+  font-size: large;
+}
 
 }
 @media (min-width:362px) and (max-width:500px){
  
  
 .img-circle{
-  margin-left: 15% !important;
+  margin-left: 11% !important;
 }
 p{
-  font-size: xx-large;
+  font-size: x-large;
 }
 #three{
   top: 60%;
@@ -114,7 +117,7 @@ p{
 }
 @media (min-width:590px) and (max-width:620px){
   .img-circle {
-    margin-left: 20% !important;
+    margin-left: 17% !important;
     margin-top: 20% !important;
     height: 400px !important;
     width: 380px !important;
